<resources>

    <string name="closebutton"></string>

    <!--Login page-->
    <string name="app_name">Health Doc</string>
    <string name="hello_world">LOGIN</string>
    <string name="mail">Email_id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="show_password">Show Password</string>
    <string name="forgot_password">Forgot password?</string>


    <string name="navvinay">Vinay</string>
    <string name="mailvinay">kembhavi.vinay@gmail.com</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!--Forgot passeord-->
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

    <!--Signup -->
    <string name="hello">HELLO</string>
    <string name="signUp">SIGNUP</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="mobilenumber">mobile no</string>
    <string name="signupemail">mail id</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="birth">date of birth</string>
    <string name="next">NEXT</string>
    <string name="confirmPassword">confirm password</string>
    <string name="err_msg_fname">Enter your first name</string>
    <string name="err_msg_lname">Enter your last name</string>
    <string name="err_msg_mobile">Enter your mobile number</string>
    <string name="err_msg_mail">Enter your mail id</string>
    <string name="err_msg_birth">Enter your birthday</string>
    <string name="err_msg_pwd">Enter password</string>
    <string name="err_msg_cpwd">Enter confirmpassword</string>


    <!--signup test case-->
    <string name="err_msg_fname1">Invalid firstname</string>
    <string name="err_msg_lname1">Invalid lastname</string>
    <string name="err_msg_num">Invalid number</string>
    <string name="err_msg_mail1">Invalid Mailid</string>
    <string name="err_msg_pwd1">Atleast 8 charcheters or numbers</string>
    <string name="err_msg_cpwd1">Both password Doesnt match</string>
    <string name="err_msg_birth1">dd/mm/yyyy</string>
    <string name="occupation">Occupation</string>
    <string name="spinner_title">Select Occupation</string>
    <string-array name="occupation_names">
        <item>Students</item>
        <item>Officers</item>
        <item>police</item>
        <item>Students</item>
        <item>Officers</item>
        <item>police</item>
    </string-array>


    //BMI page
    <string name="bmi_text">Calculate your BMI</string>
    <string name="enterWeight">Enter your weight in kgs</string>
    <string name="enterHeight">Enter your height in feet</string>


    <string name="UserName">User Name</string>
    <string name="useremail">user@domain</string>


    //Home page options.
    <string name="timeline">Timeline</string>
    <string name="profile">Profile</string>
    <string name="health_status">Health Status</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="blogs">Blogs</string>
    <string name="submenu">-----</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="runner">Runner</string>

    <string name="title_activity_home__acitivity">Home</string>


    <!--Navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Pedometer package-->
    <string name="notification_subtitle">Counting your steps</string>

    <string name="started">Pedometer started.</string>
    <string name="stopped">Pedometer stopped.</string>

    <string name="steps">steps</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">steps / minute</string>
    <string name="kilometers_per_hour">kilometers / hour</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>

    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>

    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>

    <!-- Settings -->
    <string name="settings_pedometer">Settings</string>
    <string name="activity_settings">Pedometer Settings</string>
    <string name="steps_settings_title">Basic Settings</string>
    <string name="sensitivity_setting">Sensitivity</string>
    <string name="sensitivity_setting_details">Calibrate the step detector</string>
    <string name="sensitivity_setting_title">Select sensitivity level</string>
    <string name="extra_high">extra high</string>
    <string name="very_high">very high</string>
    <string name="high">high</string>
    <string name="higher">higher</string>
    <string name="medium">medium</string>
    <string name="lower">lower</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="extra_low">extra low</string>
    <string name="operation_level_setting">Operational level</string>
    <string name="operation_level_setting_details">Some OS versions prevent using sensors when the screen is off; set the level that works for you</string>
    <string name="operation_level_setting_title">Select operational level</string>
    <string name="run_in_background">Normal (just try running in background)</string>
    <string name="keep_screen_on">Screen on (keep screen dim)</string>
    <string name="wake_up">Aggressive (wake up when I turn screen off)</string>
    <string name="units_setting">Units</string>
    <string name="units_setting_details">Imperial or metric units</string>
    <string name="units_setting_title">Choose your units</string>
    <string name="units_metric">metric (kilometers)</string>
    <string name="units_imperial">imperial (miles)</string>
    <string name="step_length_setting">Step length</string>
    <string name="step_length_setting_details">For distance, speed &amp; calorie calculation</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="incorrect_step_length">Incorrect step length format! Go to the Settings to change it!</string>

    <string name="quit">Quit</string>


</resources>
