<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/timeline_id"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/timeline" />
        <item
            android:id="@+id/health_status_id"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/health_status" />
        <item
            android:id="@+id/profile_id"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/profile" />
        <item
            android:id="@+id/calculate_bmi_id"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/calculate_bmi" />

        <item
            android:id="@+id/blogs_id"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/blogs"  />

        <item
                android:id="@+id/settings_id"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/settings" />
        <item
                android:id="@+id/logout_id"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />

    </group>
</menu>
