<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context="com.example.project.health.Bmi_calculate">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="410dp"
        android:layout_height="600dp"
        android:background="@color/background_color"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.project.health.MainActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="205dp"
            android:layout_height="31dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/bmi_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            tools:layout_editor_absoluteX="90dp"
            tools:layout_editor_absoluteY="82dp" />

        <EditText
            android:id="@+id/weight_id"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:ems="10"
            android:hint="@string/enterWeight"
            android:inputType="numberDecimal"
            android:padding="@dimen/activity_horizontal_margin"
            android:textColorHint="#ffffff"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="162dp" />

        <EditText
            android:id="@+id/height_id"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/weight_id"
            android:layout_alignStart="@+id/weight_id"
            android:layout_below="@+id/weight_id"
            android:layout_marginTop="29dp"
            android:ems="10"
            android:hint="@string/enterHeight"
            android:inputType="numberDecimal"
            android:padding="@dimen/activity_horizontal_margin"
            android:textColorHint="#ffffff"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="251dp" />

        <Button
            android:id="@+id/BMICalculate_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/calculate_bmi" />

        <TextView
            android:id="@+id/BMI_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/height_id"
            android:layout_alignLeft="@+id/height_id"
            android:layout_alignRight="@+id/height_id"
            android:layout_alignStart="@+id/height_id"
            android:layout_below="@+id/BMICalculate_id"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="47dp"
            android:padding="@dimen/activity_horizontal_margin"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/BMIResult_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/BMI_id"
            android:layout_alignLeft="@+id/BMI_id"
            android:layout_alignRight="@+id/BMI_id"
            android:layout_alignStart="@+id/BMI_id"
            android:layout_below="@+id/BMI_id"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

</LinearLayout>